--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,11 @@
   flex-direction: column;
 }
 
+.proyectos{
+  height: 100%;
+  width: 100%;
+}
+
 @media only screen and (max-width: 900px) {
 
   .conocimientos, .proyectos {
